--- a/src/main/resources/cincuentazo/fxml/juego-view.fxml
+++ b/src/main/resources/cincuentazo/fxml/juego-view.fxml
@@ -10,41 +10,41 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1296.0" style="-fx-background-color: #fcd8d4; -fx-border-width: 3; -fx-border-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cincuentazo.controllers.JuegoController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="795.0" prefWidth="1369.0" style="-fx-background-color: #fcd8d4; -fx-border-width: 3; -fx-border-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cincuentazo.controllers.JuegoController">
   <columnConstraints>
-      <ColumnConstraints />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="314.0" minWidth="0.0" prefWidth="41.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1133.0" minWidth="10.0" prefWidth="1091.0" />
+      <ColumnConstraints maxWidth="3.9999998092650912" minWidth="0.0" prefWidth="0.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="314.0" minWidth="0.0" prefWidth="101.4" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1196.0" minWidth="10.0" prefWidth="1196.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="119.0" minWidth="3.0" prefWidth="45.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="185.0" minHeight="0.0" prefHeight="25.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="758.0" minHeight="10.0" prefHeight="758.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="90.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="185.0" minHeight="0.0" prefHeight="48.79999542236328" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="758.0" minHeight="10.0" prefHeight="687.2000045776367" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="90.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <GridPane prefHeight="747.0" prefWidth="1110.0" style="-fx-background-color: #ab1830; -fx-background-radius: 50; -fx-border-width: 3; -fx-border-color: black; -fx-border-radius: 50;" GridPane.columnIndex="2" GridPane.rowIndex="1">
+      <GridPane prefHeight="700.0" prefWidth="1196.0" style="-fx-background-color: #ab1830; -fx-background-radius: 50; -fx-border-width: 3; -fx-border-color: black; -fx-border-radius: 50;" GridPane.columnIndex="2" GridPane.rowIndex="1">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="321.0" minWidth="0.0" prefWidth="14.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="1071.0" minWidth="10.0" prefWidth="1060.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="121.0" minWidth="5.0" prefWidth="14.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="321.0" minWidth="0.0" prefWidth="0.9999765396118176" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="1163.200048828125" minWidth="10.0" prefWidth="1163.200048828125" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="121.0" minWidth="3.599951171875091" prefWidth="3.599951171875091" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="201.0" minHeight="0.0" prefHeight="2.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="722.0" minHeight="10.0" prefHeight="722.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="34.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="201.0" minHeight="0.0" prefHeight="9.599995422363282" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="722.0" minHeight="10.0" prefHeight="672.8000045776367" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="34.0" minHeight="0.0" prefHeight="13.60003662109375" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane prefHeight="656.0" prefWidth="1059.0" style="-fx-background-color: #e64e4e; -fx-background-radius: 50; -fx-border-radius: 50; -fx-border-color: black; -fx-border-width: 3;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <GridPane prefHeight="660.0" prefWidth="1164.0" style="-fx-background-color: #e64e4e; -fx-background-radius: 50; -fx-border-radius: 50; -fx-border-color: black; -fx-border-width: 3;" GridPane.columnIndex="1" GridPane.rowIndex="1">
               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="344.0" minWidth="0.0" prefWidth="9.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="1044.0" minWidth="10.0" prefWidth="1043.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="109.0" minWidth="6.0" prefWidth="7.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="344.0" minWidth="0.0" prefWidth="4.999988746643065" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="1139.200011253357" minWidth="10.0" prefWidth="1139.200011253357" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="109.0" minWidth="0.0" prefWidth="0.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints maxHeight="192.0" minHeight="0.0" prefHeight="5.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="693.0" minHeight="10.0" prefHeight="693.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="31.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="693.0" minHeight="10.0" prefHeight="650.8000122070313" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="31.0" minHeight="0.0" prefHeight="12.79998779296875" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <GridPane prefHeight="652.0" prefWidth="1043.0" style="-fx-background-color: #cc6262; -fx-border-radius: 50; -fx-border-width: 3; -fx-border-color: BLACK; -fx-background-radius: 50;" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -171,7 +171,7 @@
                                     <Font size="15.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="labelTurnoActual" prefHeight="18.0" prefWidth="462.0" text="Turno: " GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                              <Label fx:id="labelTurnoActual" alignment="CENTER" prefHeight="18.0" prefWidth="462.0" text="Turno: " textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="3">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -208,21 +208,21 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label fx:id="LabelNombreJugador" alignment="CENTER" prefHeight="46.0" prefWidth="505.0" style="-fx-background-color: WHITE; -fx-background-radius: 20; -fx-border-width: 3; -fx-border-radius: 20; -fx-border-color: #90374c;" text="LABEL NOMBRE DEL JUGADOR" textFill="#2c2426" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <Label fx:id="LabelNombreJugador" alignment="CENTER" prefHeight="42.0" prefWidth="495.0" style="-fx-background-color: WHITE; -fx-background-radius: 20; -fx-border-width: 3; -fx-border-radius: 20; -fx-border-color: #90374c;" text="LABEL NOMBRE DEL JUGADOR" textFill="#2c2426" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                <font>
-                  <Font name="DejaVu Sans Condensed Bold" size="32.0" />
+                  <Font size="26.0" />
                </font>
             </Label>
          </children>
       </GridPane>
-      <AnchorPane layoutY="6.5" maxWidth="-Infinity" prefHeight="758.0" prefWidth="34.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+      <AnchorPane layoutY="6.5" maxWidth="-Infinity" prefHeight="653.0" prefWidth="245.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
          <children>
-            <Label fx:id="labelTurnomaquina1" alignment="CENTER" layoutY="359.0" prefHeight="40.0" prefWidth="315.0" rotate="-270.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="nombre de maquina 1" />
+            <Label fx:id="labelTurnomaquina1" alignment="CENTER" layoutX="8.0" layoutY="359.0" prefHeight="40.0" prefWidth="315.0" rotate="-270.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="nombre de maquina 1" />
          </children>
       </AnchorPane>
       <AnchorPane maxWidth="-Infinity" prefHeight="55.0" prefWidth="1132.0" GridPane.columnIndex="2">
          <children>
-            <Label fx:id="labelTurnoMaquina2" alignment="CENTER" layoutX="407.0" layoutY="8.0" prefHeight="27.0" prefWidth="315.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="nombre de maquina 2" />
+            <Label fx:id="labelTurnoMaquina2" alignment="CENTER" layoutX="407.0" layoutY="8.0" prefHeight="35.0" prefWidth="315.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="nombre de maquina 2" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="758.0" prefWidth="192.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
