--- a/src/main/resources/cincuentazo/fxml/ventana-ganador-vista.fxml
+++ b/src/main/resources/cincuentazo/fxml/ventana-ganador-vista.fxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="330" prefWidth="500" spacing="20" style="-fx-background-color: #42672a;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cincuentazo.controladores.VentanaGanadorControlador">
+<VBox alignment="CENTER" prefHeight="330" prefWidth="600.0" spacing="20" style="-fx-background-color: #42672a;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cincuentazo.controladores.VentanaGanadorControlador">
 
     <padding>
         <Insets bottom="20" left="20" right="20" top="20" />
@@ -37,7 +34,7 @@
          </ImageView>
       
           <!-- Texto del ganador -->
-          <Label fx:id="lblGanador" style="-fx-font-weight: bold;" text="¡Ganador del Cincuentazo!" textFill="#fcfcfc">
+          <Label fx:id="lblGanador" alignment="CENTER" prefHeight="29.0" prefWidth="327.0" style="-fx-font-weight: bold;" text="¡Ganador del Cincuentazo!" textFill="#fcfcfc">
             <font>
                <Font name="Comic Sans MS" size="21.0" />
             </font>
