--- a/src/main/resources/cincuentazo/fxml/inicio-vista.fxml
+++ b/src/main/resources/cincuentazo/fxml/inicio-vista.fxml
@@ -1,23 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.effect.Light.Distant?>
-<?import javafx.scene.effect.Lighting?>
-<?import javafx.scene.effect.Shadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="457.0" prefWidth="697.0" style="-fx-background-color: #D6E8FF; -fx-border-color: blue; -fx-border-width: 3;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cincuentazo.controladores.InicioControlador">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="457.0" prefWidth="697.0" style="-fx-background-color: #D6E8FF; -fx-border-color: blue; -fx-border-width: 3;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cincuentazo.controladores.InicioControlador">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="228.20001220703125" minWidth="10.0" prefWidth="223.4000244140625" />
@@ -83,7 +74,7 @@
       </ImageView>
       <Button fx:id="btnJugar" contentDisplay="TEXT_ONLY" graphicTextGap="2.0" mnemonicParsing="false" onAction="#onActionJugar" prefHeight="44.0" prefWidth="156.0" style="-fx-background-color: #000993; -fx-background-radius: 50%;" text="JUGAR" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
          <font>
-            <Font name="Comic Sans MS" size="20.0" />
+            <Font name="FreeMono Bold" size="22.0" />
          </font>
          <GridPane.margin>
             <Insets />
@@ -164,7 +155,7 @@
                   <Insets />
                </VBox.margin>
                <font>
-                  <Font name="Comic Sans MS" size="19.0" />
+                  <Font name="FreeMono Bold" size="19.0" />
                </font>
             </Label>
             <TextField fx:id="textFieldNombre" alignment="CENTER" prefHeight="14.0" prefWidth="150.0" promptText="escribe aquí" style="-fx-background-color: #EEEBFF;">
@@ -214,7 +205,7 @@
          <children>
             <Label contentDisplay="RIGHT" prefHeight="62.0" prefWidth="161.0" text="Cantidad de jugadores" textAlignment="CENTER" wrapText="true" GridPane.columnSpan="3" GridPane.halignment="CENTER">
                <font>
-                  <Font name="Comic Sans MS" size="16.0" />
+                  <Font name="FreeMono Bold" size="17.0" />
                </font>
             </Label>
             <Button fx:id="btnUnJugador" mnemonicParsing="false" onAction="#onActionSeleccionarUnJugador" prefHeight="34.0" prefWidth="31.0" style="-fx-background-color: #000993;" text="1" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
@@ -222,7 +213,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
                <font>
-                  <Font name="Comic Sans MS" size="17.0" />
+                  <Font name="FreeMono" size="17.0" />
                </font>
                <effect>
                   <DropShadow height="28.02" radius="14.094999999999999" width="30.36">
@@ -244,7 +235,7 @@
             </Button>
             <Button fx:id="btnDosJugadores" mnemonicParsing="false" onAction="#onActionSeleccionarDosJugadores" prefHeight="34.0" prefWidth="31.0" style="-fx-background-color: #000993;" text="2" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BASELINE">
                <font>
-                  <Font name="Comic Sans MS" size="17.0" />
+                  <Font name="FreeMono" size="17.0" />
                </font>
                <effect>
                   <DropShadow height="28.02" radius="14.094999999999999" width="30.36">
@@ -266,7 +257,7 @@
             </Button>
             <Button fx:id="btnTresJugadores" mnemonicParsing="false" onAction="#onActionSeleccionarTresJugadores" prefHeight="34.0" prefWidth="31.0" style="-fx-background-color: #000993;" text="3" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
                <font>
-                  <Font name="Comic Sans MS" size="17.0" />
+                  <Font name="FreeMono" size="17.0" />
                </font>
                <GridPane.margin>
                   <Insets right="20.0" />
