--- a/src/main/resources/cincuentazo/fxml/ventana-ganador-vista.fxml
+++ b/src/main/resources/cincuentazo/fxml/ventana-ganador-vista.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="330" prefWidth="600.0" spacing="20" style="-fx-background-color: #42672a;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cincuentazo.controladores.VentanaGanadorControlador">
+<VBox alignment="CENTER" prefHeight="482.0" prefWidth="622.0" spacing="20" style="-fx-background-color: #42672a;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cincuentazo.controladores.VentanaGanadorControlador">
 
     <padding>
         <Insets bottom="20" left="20" right="20" top="20" />
@@ -18,10 +23,13 @@
    </ImageView>
 
     <!-- Imagen superior -->
-    <ImageView fx:id="imgGanador" fitHeight="181.0" fitWidth="185.0">
+    <ImageView fx:id="imgGanador" fitHeight="195.0" fitWidth="196.0">
       <image>
          <Image url="@../imagenes/inicio y final/bellota.png" />
-      </image></ImageView>
+      </image>
+      <effect>
+         <InnerShadow />
+      </effect></ImageView>
    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
       <children>
          <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
@@ -31,10 +39,13 @@
             <HBox.margin>
                <Insets right="15.0" />
             </HBox.margin>
+            <effect>
+               <DropShadow />
+            </effect>
          </ImageView>
       
           <!-- Texto del ganador -->
-          <Label fx:id="lblGanador" alignment="CENTER" prefHeight="29.0" prefWidth="327.0" style="-fx-font-weight: bold;" text="¡Ganador del Cincuentazo!" textFill="#fcfcfc">
+          <Label fx:id="lblGanador" alignment="CENTER" prefHeight="31.0" prefWidth="435.0" style="-fx-font-weight: bold;" text="¡Ganador del Cincuentazo!" textFill="#fcfcfc">
             <font>
                <Font name="Comic Sans MS" size="21.0" />
             </font>
@@ -46,20 +57,23 @@
             <HBox.margin>
                <Insets left="15.0" />
             </HBox.margin>
+            <effect>
+               <DropShadow />
+            </effect>
          </ImageView>
       </children>
    </HBox>
 
     <!-- Contenedor de botones -->
     <HBox alignment="CENTER" spacing="15">
-        <Button fx:id="btnNuevoJuego" onAction="#botonIniciarNuevoJuego" style="-fx-background-color: #62ae1e; -fx-background-radius: 15; -fx-padding: 8 20;" text="Nuevo juego">
+        <Button fx:id="btnNuevoJuego" onAction="#botonIniciarNuevoJuego" prefHeight="49.0" prefWidth="166.0" style="-fx-background-color: #62ae1e; -fx-background-radius: 15; -fx-padding: 8 20; -fx-border-color: black; -fx-border-radius: 14; -fx-border-width: 2;" text="Nuevo juego">
          <font>
-            <Font name="Comic Sans MS" size="16.0" />
+            <Font name="FreeMono Bold" size="18.0" />
          </font></Button>
 
-        <Button fx:id="btnSalir" onAction="#botonSalir" style="-fx-background-color: #c6c6c6; -fx-background-radius: 15; -fx-padding: 8 20;" text="Salir">
+        <Button fx:id="btnSalir" onAction="#botonSalir" style="-fx-background-color: #c6c6c6; -fx-background-radius: 15; -fx-padding: 8 20; -fx-border-color: black; -fx-border-width: 2; -fx-border-radius: 15;" text="Salir">
          <font>
-            <Font name="Comic Sans MS" size="16.0" />
+            <Font name="FreeMono Bold" size="18.0" />
          </font></Button>
     </HBox>
 
